kubernetes/expensy-namespace.yaml
apiVersion: v1

kind: Namespace
metadata:
  name: expensy
  labels:
    purpose: app
