kubernetes/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    purpose: app
