kubernetes/redis-manifest.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
  namespace: expensy
spec:
  serviceName: "redis-service"
  replicas: 2
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: redis-container
          image: bitnami/redis:latest
          ports:
            - containerPort: 6379
          command:
            - "redis-server"
            - "--requirepass"
            - "$(REDIS_PASSWORD)"
            - "--dir"
            - "/bitnami/redis/data"
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: redis-storage
              mountPath: /bitnami/redis/data
  volumeClaimTemplates:
    - metadata:
        name: redis-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
        storageClassName: managed-csi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: expensy
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  clusterIP: None
